static/css/style.css
/* Google Fonts Import */
@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Source+Sans+3:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


/* Whole Page Styling */

body,
header {
    max-width: 1400px;
    background-color: var(--mid-grey);
    margin: 0 auto;
}

html {
    scroll-behavior: smooth;
}


/* Document Colours */

:root {

    /* Solid Colours */
    --dark: #140C00;
    --light: #fffefb;
    --light-grey: #EAEAEA;
    --light-grey-hov: #cccccc;
    --mid-grey: #959595;
    --dark-grey: #4d4d4d;
    --yellow: #FFCD85;
    --yellow-hov: #feb247;
    --yellow-light: #FFE7C6;
    --blue: #0f748a;
    --blue-hov: #005163;
    --blue-light: #BCE1E9;
    --warning: #B25B76;
    --warning-hov: #6b102d;
    --warning-light: #e9c2cf;
    --warning-light-hov: #eeaec3;
    --success: #419759;
    --success-hov: #00601b;
    --success-light: #b5dec1;
    --success-light-hov: #8cc29c;
}

/* Text Colour Classes */

.text-ib-light {
    color: var(--light);
}

.text-ib-dark {
    color: var(--dark);
}

.text-dark-grey {
    color: var(--dark-grey);
}

.text-mid-grey {
    color: var(--mid-grey);
}

.text-yellow {
    color: var(--yellow);
}

.text-blue {
    color: var(--blue);
}

.text-ib-success {
    color: var(--success);
}

.text-ib-warning {
    color: var(--warning);
}


/* Background Colour Classes */

.bg-ib-white {
    background-color: white;
}

.bg-ib-dark {
    background-color: var(--dark);
}

.bg-ib-light {
    background-color: var(--light);
}

.bg-light-grey {
    background-color: var(--light-grey);
}

.bg-mid-grey {
    background-color: var(--mid-grey);
}

.bg-dark-grey {
    background-color: var(--dark-grey);
}

.bg-yellow {
    background-color: var(--yellow);
}

.bg-yellow-light {
    background-color: var(--yellow-light) !important;
}

.bg-blue {
    background-color: var(--blue);
}

.bg-blue-light {
    background-color: var(--blue-light);
}

.bg-ib-success {
    background-color: var(--success);
}

.bg-ib-success-light {
    background-color: var(--success-light);
}

.bg-ib-warning {
    background-color: var(--warning);
}

.bg-ib-warning-light {
    background-color: var(--warning-light);
}


/* Fonts, Sizes & Weights */

.font-title {
    font-family: "Oxygen", sans-serif;
}

.font-body {
    font-family: "Source Sans 3", sans-serif;
}

.weight-light {
    font-weight: 300;
}

.weight-regular {
    font-weight: 400;
}

.weight-medium {
    font-weight: 500;
}

.weight-semibold {
    font-weight: 600;
}

.weight-bold {
    font-weight: 700;
}


/* Recurring Elements */


/* Generic Classes */

.shadow {
    box-shadow: 0 0.2rem 0.5rem rgba(0,0,0,.25)!important;
}

.shadow-sm {
    box-shadow: 0 0.1rem 0.2rem rgba(0,0,0,.35)!important;
}

.ib-lh-1 {
    line-height: 1;
}

.ib-lh-2 {
    line-height: 2;
}

.section-title {
    font-size: 24px;
}

.section-title-lrg {
    font-size: 28px;
}

.subtitle {
    font-size: 20px;
}

.small-para-text {
    font-size: 14px;
}

.big-para-text {
    font-size: 20px;
}

.ib-container p,
.ib-container h1,
.ib-container h2,
.ib-container h3,
.ib-container h4,
.ib-container h5 {
    margin: 0;
}

hr {
    color: var(--mid-grey);
    opacity: 1;
}


/* Buttons */

button {
    border: none;
}

.ib-button {
    font-size: 16px;
    padding: 6px 10px;
    border-radius: 2px;
}

.ib-button-sm {
    font-size: 16px;
    padding: 0 5px;
    border-radius: 2px;
}

.ib-button-blue {
    background: var(--blue);
}

.ib-button-light-blue  {
    background: var(--blue-light);
}

.ib-button-grey {
    background: var(--light-grey);
}

.ib-button-yellow {
    background: var(--yellow);
}

.ib-button-warning {
    background: var(--warning-light);
}

.ib-button-success {
    background: var(--success-light);
}


.ib-button-blue,
.ib-button-grey,
.ib-button-yellow,
.ib-button-warning,
.ib-button-success {
    transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
}

.ib-button-blue:hover {
    background: var(--blue-hov);
}

.ib-button-grey:hover {
    background: var(--light-grey-hov);
}

.ib-button-yellow:hover {
    background: var(--yellow-hov);
}

.ib-button-warning:hover {
    background: var(--warning-light-hov);
}

.ib-button-success:hover {
    background: var(--success-light-hov);
}


/* Quantity Selector */

.decrement-qty.btn,
.increment-qty.btn {
    border: none;
    height: 40px;
    width: 40px;
}

.decrement-qty-sm.btn,
.increment-qty-sm.btn {
    height: 35px;
    width: 35px;
}

input.qty-input-sm {
    height: 100% !important;
}

.btn:hover,
.btn:active,
.btn:focus,
.btn:focus-visible,
.btn-check:checked+.btn,
.btn.active,
.btn.show,
.btn:first-child:active,
:not(.btn-check)+.btn:active {
    background-color: var(--blue-hov);
    color: white;
    border-color: var(--blue-hov);
}

.decrement-qty:disabled,
.increment-qty:disabled {
    background-color: var(--mid-grey) !important;
    color: var(--dark-grey);
}

.qty_input:focus,
.qty_input:focus-visible {
    box-shadow: 0px 0px 0px 2px var(--blue) inset;
    border: none !important;
    outline: none !important;
}


/* Back To Top Button */

#btt-btn {
    width: 50px;
    height: 50px;
    background: var(--yellow);
    background-blend-mode: lighten;
    position: fixed;
    right: 12px;
    bottom: 12px;
    z-index: 9;
    display: none;
}

#btt-btn a,
.remove-item,
.update-link {
    cursor: pointer;
}

#btt-btn a i {
    font-size: 1.5em !important;

}


/* Edit / Delete Buttons */

.edit-btn {
    color: var(--success);
    border: var(--success) solid 1px;
    display: inline-flex;
}

.del-btn {
    color: var(--warning);
    border: var(--warning) solid 1px;
    background-color: transparent;
}

.dismiss-btn {
    color: var(--dark-grey);
    border: var(--mid-grey) solid 1px;
    background-color: transparent;
}
/* ... */

